# internal/api/server.go
@@ -127,6 +127,9 @@ func (srv *Server) routes() {
 	m.HandleFunc("/api/v1/dhcp/apply", srv.requireAuth(srv.handleDHCPApply))
 	m.HandleFunc("/api/v1/dhcp", srv.requireAuth(srv.handleDHCP))
 	m.HandleFunc("/api/v1/routes/apply", srv.requireAuth(srv.handleRoutesApply))
+	m.HandleFunc("/api/v1/frr/dynamic-routing/status", srv.requireAuth(srv.handleFRRDynamicRoutingStatus))
+	m.HandleFunc("/api/v1/frr/dynamic-routing/apply", srv.requireAuth(srv.handleFRRDynamicRoutingApply))
+	m.HandleFunc("/api/v1/frr/dynamic-routing", srv.requireAuth(srv.handleFRRDynamicRouting))
 	m.HandleFunc("/api/v1/frr/install/status", srv.requireAuth(srv.handleFRRInstallStatus))
 	m.HandleFunc("/api/v1/frr/install", srv.requireAuth(srv.handleFRRInstall))
 	m.HandleFunc("/api/v1/frr/service", srv.requireAuth(srv.handleFRRService))
